--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 </tr>
             </table>
 
-            <input name="rabbat" type="number" value="10"><label for="rabbat">% rabbat</label><br>
+            <input name="rabbat" type="number" value="10" min="0" max="100"><label for="rabbat">% rabbat</label><br>
             <input type="submit">
         </form>
         <textarea id="output"></textarea>
